Creating a page for each cycle pump and programming their generation

--- a/src/cyclepumps/lund_magistratsvagen/lund-magistratsvagen.mdx
+++ b/src/cyclepumps/lund_magistratsvagen/lund-magistratsvagen.mdx
@@ -7,6 +7,7 @@ long: 13.209625
 status: true
 images: [image_0.jpg, image_1.jpg, image_2.jpg]
 imageAltText: A picture of the pump at Magistratsvägen
+slug: /cyclepumps/lund_magistratsvagen
 ---
 
 This is a cycle pump in Lund.
