Adding a swipeable view for images of the cycle pump

--- a/src/cyclepumps/lund_magistratsvagen/lund-magistratsvagen.mdx
+++ b/src/cyclepumps/lund_magistratsvagen/lund-magistratsvagen.mdx
@@ -5,7 +5,7 @@ address: Magistratsvägen, cykelparkeringen vid bussens vändhållplats
 lat: 55.720157
 lng: 13.209625
 status: true
-images: [image_0.jpg, image_1.jpg, image_2.jpg]
+images: [image_00.webp, image_01.webp, image_02.webp]
 imageAltText: A picture of the pump at Magistratsvägen
 slug: /cyclepumps/lund_magistratsvagen
 ---
